feat: add checked for first meme

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -15,7 +15,7 @@
 			<h1 class="h1">CSS Баянчик</h1>
 		</header>
 		<main class="main">
-			<input type="radio" name="memes" id="meme1" class="input">
+			<input type="radio" name="memes" id="meme1" class="input" checked>
 			<label for="meme1" class="label">
 				<div class="meme_up-block">
 					<div class="meme_text">
